# rime

./: .gitignore  README.md  pyproject.toml  rime-deploy.py
src/rime_deploy/: config.py  main.py  metadata.py  utils.py
