[project]
name = "rime-deploy"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jasyo", email = "31342892+yaojia25@users.noreply.github.com"},
]
dependencies = [
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
